--- a/src/package.json
+++ b/src/package.json
@@ -4,8 +4,14 @@
   "description": "Bot Para lançar horas na sexta feira",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "start": "node index.js",
+    "test": "node test"
   },
   "author": "Thiago Resende",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "jsdom": "^16.3.0",
+    "puppeteer": "^5.2.1"
+  }
 }
